# scratchpad

./: .gitignore  README.md
boneyard/: InterviewPractice.ipynb  ProbabilityReview.ipynb  README.md  demonstrateMakeIssue.sh  demonstrateMakeIssueResolved.sh  supabase_demo.py
finetune/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
finetune/notebook/: MessingWithAttention.ipynb  MsiGpuVerification.ipynb  TransformersFinetune.ipynb
finetune/notebook/mimic/: NoteDataExploration.ipynb
finetune/src/scripts/: download_mimiv-iv-note_data.sh
genie/notebook/: DataExploration.ipynb  GenieDataExploration.ipynb
koo/data/: .gitignore
